<resources>
    <!--global-->
    <string name="app_name">Stomanage</string>
    <string name="welcome_messages">Hello, %1$s</string>
    <string name="name_and_date" translatable="false">%1$s - %2$s</string>
    <string name="welcome">Welcome </string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="add">Add</string>
    <string name="perm_needed">Permission needed</string>
    <string name="storage_perm_message_read">In order to select an image it is necessary to confirm the storage Permission</string>
    <string name="storage_perm_message_write">In order to see the images it is necessary to confirm the storage Permission</string>
    <string name="uploading_success">File uploaded successfully</string>
    <string name="uploading">Uploading please wait</string>
    <string name="updating">Updating please wait</string>
    <string name="name_already_exists">This name already exists</string>
    <string name="name_error">please enter name</string>
    <!--login-->
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_error">An error occurred while logging in. Please contact your system administrator</string>
    <string name="login_error_DB">User not found. Please contact your system administrator</string>
    <string name="password_reset_link">A password reset link has been sent to your email</string>
    <!--chapters and calss-->
    <string name="chapters">Chapters</string>
    <string name="chapters_name">Enter chapters name</string>
    <string name="new_chapters">Creating a new chapters</string>
    <string name="select_image">Select\nan image</string>
    <string name="chapters_image">chapters image</string>
    <string name="not_selected_class">Please select at least one class</string>
    <string name="Class">Class</string>
    <string name="class_name">Enter class name</string>
    <string name="classobj_not_found">There was a problem: The class you were looking for was not found</string>
    <string name="no_regiment_in_class">There are no regiment in the chosen class</string>
    <string name="enter_age_group">Enter age group</string>
    <string name="age_group_already_exists">This age group already exists</string>
    <string name="delete_regiment_message">Are you sure you want to delete this regiment?</string>
    <string name="delete_class_message">Are you sure you want to delete this class?</string>
    <string name="select_leadership_error">Please select leadership</string>
    <string name="select_age_error">Please select age group</string>
    <!--users-->
    <string name="users">Users</string>
    <string name="user_name">Enter user name</string>
    <string name="new_user">Creating a new user</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_leadership">Select leadership</string>
    <string name="select_class">Select class</string>
    <string name="select_role">Select role</string>
    <string name="first_name_error">Enter first name</string>
    <string name="last_name_error">Enter last name</string>
    <string name="email_error">Enter email</string>
    <string name="password_error">Enter password</string>
    <string name="confirm_Password_error">Enter password again</string>
    <string name="select_class_error">Please select class</string>
    <string name="select_role_error">Please select role</string>
    <string name="password_match_error">Password not match</string>
    <string name="password_length_error">Password must be at least 6 characters long</string>
    <!--items-->
    <string name="items">Items</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="new_item">Creating a new item</string>
    <string name="item_name">Item name</string>
    <string name="returnedable">Returnedable item</string>
    <string name="supplier_name">Supplier name</string>
    <!--warehouses-->
    <string name="warehouses">Warehouses</string>
    <string name="update_quantity">Update quantity</string>
    <string name="select_quantity">Select quantity</string>
    <string name="update">Update</string>
    <!--factories-->
    <string name="factories">Factories</string>
    <string name="Factory_name">Enter factory name</string>
    <string name="new_factory">Creating a new factory</string>
    <string name="selected">Selected</string>
    <string name="not_selected">Not selected</string>
    <string name="close_factory">Are you sure you want to close the factory?\nPlease note that this will close all existing orders in this factory</string>
    <!--storekeeper-->
    <string name="storekeeper">Storekeeper</string>
    <!--Orders-->
    <string name="orders">Orders</string>
    <string name="order_list">Order list</string>
    <string name="my_orders">My orders</string>
    <string name="order_name">Enter order name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new_order">Creating a new order</string>
    <string name="invalid_date">The selected date is invalid</string>
    <string name="select_item">Select an item</string>
    <string name="delete_order_message">Are you sure you want to delete this order?</string>
    <string name="allow_order_editing">Allow order editing</string>
    <string name="order_ready">Order ready</string>
    <string name="closing_order">Closing order. Please wait…</string>
    <!--open orders-->
    <string name="open_orders">Open orders</string>
    <!--Order history-->
    <string name="order_history">Order history</string>
    <!--storekeepers-->
    <string name="storekeepers">Storekeepers</string>
    <string name="not_set">Not set</string>
    <string name="select_regiment">Select regiment</string>
    <string name="select_regiment_error">Please select regiment</string>
    <!--new year-->
    <string name="new_year">New year</string>
    <string name="new_year_action">New year action</string>
    <string name="new_year_action_message">Are you sure you want to perform this action? Note This action is not reversible</string>
    <!--open tabs-->
    <string name="open_tabs">Open tabs</string>
    <string name="quantity_returned">Quantity returned</string>
    <!--storekeeper-->
    <string name="Guide_options">Guide options</string>equipment
    <string name="storekeeper_options">storekeeper options</string>
    <string name="stocktaking">Stocktaking</string>
    <string name="old_quantity">Old quantity</string>
    <string name="new_quantity">New quantity</string>
    <string name="equipment">Equipment</string>

</resources>